Blender 2.8 "Make duplicates real" operator settings crashes blender #58481

Closed
opened 2018-12-02 00:17:15 +01:00 by Jan Kopidol · 7 comments

System Information
Operating system: Win10
Graphics card: NVIDIA GeForce GTX 960M

Blender Version
Broken: blender-2.80.0-git.0f5b53ba4dc-windows64

Short description of error
Crashes when trying to setup "Make duplicates real" operator.

Exact steps for others to reproduce the error

  1. Create two objects (meshes)
  2. Make 1 parent of second one.
  3. Enable Object > Instancing > Verts and/or Faces
  4. Use "Make Duplicates real" (spacebar menu)
  5. Click any of checkboxes in opeartor toolbox (Parent / Keep Hierarchy)

Maybe related? https://developer.blender.org/T49918 (appeared in older version)
Also probably related to this: https://developer.blender.org/T58118

**System Information** Operating system: Win10 Graphics card: NVIDIA GeForce GTX 960M **Blender Version** Broken: blender-2.80.0-git.0f5b53ba4dc-windows64 **Short description of error** Crashes when trying to setup "Make duplicates real" operator. **Exact steps for others to reproduce the error** 1. Create two objects (meshes) 2. Make 1 parent of second one. 3. Enable Object > Instancing > Verts and/or Faces 4. Use "Make Duplicates real" (spacebar menu) 5. Click any of checkboxes in opeartor toolbox (Parent / Keep Hierarchy) Maybe related? https://developer.blender.org/T49918 (appeared in older version) Also probably related to this: https://developer.blender.org/T58118
Author

Added subscriber: @JanKopidol

Added subscriber: @JanKopidol
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

Right now (since 9ed522db73), we are asserting even earlier here:

BLI_assert(ob->id.tag & LIB_TAG_COPIED_ON_WRITE);

1   raise                                                       0x7ffff466853f 
2   abort                                                       0x7ffff4652895 
3   mesh_build_data                  DerivedMesh.c         2009 0x29a6733      
4   mesh_get_eval_final              DerivedMesh.c         2170 0x29a6b8a      
5   make_duplis_verts                object_dupli.c        495  0x2b34245      
6   object_duplilist                 object_dupli.c        1197 0x2b36267      
7   make_object_duplilist_real       object_add.c          1523 0x2135ef1      
8   object_duplicates_make_real_exec object_add.c          1680 0x21365fd    

without the above assert, it is asserting elsewhere (when changing setting for redo):

BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id));

1   raise                                                      0x7ffff466853f 
2   abort                                                      0x7ffff4652895 
3   DEG_get_evaluated_scene          depsgraph_query.cc   134  0x2f1b71d      
4   DEG_get_evaluated_view_layer     depsgraph_query.cc   142  0x2f1b743      
5   init_context                     object_dupli.c       108  0x2b32f88      
6   object_duplilist                 object_dupli.c       1194 0x2b361e3      
7   make_object_duplilist_real       object_add.c         1523 0x2135ef1      
8   object_duplicates_make_real_exec object_add.c         1680 0x21365fd      
9   wm_operator_exec                 wm_event_system.c    964  0x1c6bc5a      
10  WM_operator_repeat               wm_event_system.c    1041 0x1c6bf28      
11  ED_undo_operator_repeat          ed_undo.c            456  0x1cab4b2    
                                                              

Checking further...

Can confirm. Right now (since 9ed522db73), we are asserting even earlier here: `BLI_assert(ob->id.tag & LIB_TAG_COPIED_ON_WRITE);` ``` 1 raise 0x7ffff466853f 2 abort 0x7ffff4652895 3 mesh_build_data DerivedMesh.c 2009 0x29a6733 4 mesh_get_eval_final DerivedMesh.c 2170 0x29a6b8a 5 make_duplis_verts object_dupli.c 495 0x2b34245 6 object_duplilist object_dupli.c 1197 0x2b36267 7 make_object_duplilist_real object_add.c 1523 0x2135ef1 8 object_duplicates_make_real_exec object_add.c 1680 0x21365fd ``` without the above assert, it is asserting elsewhere (when changing setting for redo): `BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id));` ``` 1 raise 0x7ffff466853f 2 abort 0x7ffff4652895 3 DEG_get_evaluated_scene depsgraph_query.cc 134 0x2f1b71d 4 DEG_get_evaluated_view_layer depsgraph_query.cc 142 0x2f1b743 5 init_context object_dupli.c 108 0x2b32f88 6 object_duplilist object_dupli.c 1194 0x2b361e3 7 make_object_duplilist_real object_add.c 1523 0x2135ef1 8 object_duplicates_make_real_exec object_add.c 1680 0x21365fd 9 wm_operator_exec wm_event_system.c 964 0x1c6bc5a 10 WM_operator_repeat wm_event_system.c 1041 0x1c6bf28 11 ED_undo_operator_repeat ed_undo.c 456 0x1cab4b2 ``` ``` ``` Checking further...
Sergey Sharybin was assigned by Philipp Oeser 2018-12-03 12:17:13 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Hm, is_child() is failing in make_child_duplis() as well... [I guess it is comaparing evaluated vs. original object?]

Still pretty much lost when it comes to COW/DEG, here is some try to get something meaningful happen P855 (that will make "Make Duplicates Real" actually do something, but it is still crashing on redo... -- and I am unsure if this is even the route to go...)

@Sergey: could you check?

Hm, `is_child()` is failing in `make_child_duplis()` as well... [I guess it is comaparing evaluated vs. original object?] Still pretty much lost when it comes to COW/DEG, here is some try to get something meaningful happen [P855](https://archive.blender.org/developer/P855.txt) (that will make "Make Duplicates Real" actually do something, but it is still crashing on redo... -- and I am unsure if this is even the route to go...) @Sergey: could you check?

This issue was referenced by 36ca072375

This issue was referenced by 36ca072375deea4803df4681716c1d3224095e07

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58481
No description provided.