Fix T58481: "Make duplicates real" operator settings crashes